# coordinationhub

./: .coveragerc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPLETE_PROJECT_DOCUMENTATION.md  GROK_CONNECTORS.md  IMPLEMENTATION_PLAN_HA_SPAWNER.md  LLM_Development.md  README.md  RELEASING.md  SECURITY_FIXES.md  coordination_spec.json  coordination_spec.yaml  coordinationhub-v0.3.1-refinement-checklist.md  pyproject.toml
.claude/: settings.json
.github/workflows/: publish.yml  release.yml  test.yml
coordinationhub/: __init__.py  __main__.py  _storage.py  agent_registry.py  agent_status.py  assessment.py  assessment_scorers.py  broadcast_subsystem.py  broadcasts.py  change_subsystem.py  cli.py  cli_agents.py  cli_commands.py  cli_deps.py  cli_intent.py  cli_leases.py  cli_locks.py  cli_parser.py  cli_setup.py  cli_setup_doctor.py  cli_spawner.py  cli_sse.py  cli_tasks.py  cli_utils.py  cli_vis.py  conflict_log.py  context.py  core.py  core_broadcasts.py  core_change.py  core_dependencies.py  core_handoffs.py  core_identity.py  core_leases.py  core_locking.py  core_messaging.py  core_spawner.py  core_tasks.py  core_visibility.py  core_work_intent.py  (+50 more)
coordinationhub/data/: monitor_skill.md
coordinationhub/hooks/: __init__.py  base.py  claude_code.py  cursor.py  kimi_cli.py  stdio_adapter.py
coordinationhub/plugins/: __init__.py  registry.py
coordinationhub/plugins/assessment/: __init__.py  assessment.py  assessment_scorers.py
coordinationhub/plugins/dashboard/: __init__.py  dashboard.py  dashboard_css.py  dashboard_html.py  dashboard_js.py
coordinationhub/plugins/graph/: __init__.py  graphs.py
coordinationhub/schemas/: __init__.py  audit.py  change.py  coordination.py  deps.py  dlq.py  handoffs.py  identity.py  intent.py  leases.py  locking.py  messaging.py  spawner.py  tasks.py  visibility.py
findings/: coordinationhub_closed.md
scripts/: check_stale_drift.sh  gen_docs.py  install-hooks.sh  propose_stale_phrases.py  release.sh  update_dispatch_floor.py  update_schemas.py
scripts/hooks/: pre-commit
tests/: __init__.py  conftest.py  dispatch_coverage_floor.json  load_test.py  test_agent_lifecycle.py  test_assessment.py  test_authz.py  test_cli.py  test_cli_integration.py  test_concurrent.py  test_conflicts.py  test_coordination.py  test_core.py  test_core_facade_invariant.py  test_dashboard_html.py  test_db_migration.py  test_db_safety.py  test_dispatch_coverage.py  test_dispatch_coverage_floor.py  test_event_bus.py  test_graphs.py  test_handoffs.py  test_hooks.py  test_hooks_base.py  test_housekeeping.py  test_integration.py  test_lock_cache.py  test_locking.py  test_mcp_server.py  test_multiprocess_sync.py  test_notifications.py  test_plugins.py  test_scenario.py  test_setup.py  test_spawner.py  test_tasks.py  test_tool_count.py  test_validation.py  test_visibility.py  test_work_intent.py
tests/fixtures/claude_code_events/: PostToolUse_Write.json  PreToolUse_Write.json  SubagentStart.json  UserPromptSubmit.json
tests/fixtures/stdio_events/: PreToolUse_Agent.json  SessionEnd.json  SessionStart.json  SubagentStart.json  SubagentStop.json
wiki-local/: glossary.md  index.md  spec-project.md
