[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coordinationhub"
dynamic = ["version"]
description = "Declarative multi-agent coordination hub — YAML/JSON graphs, file ownership, live visibility, assessment runner"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "IronAdamant", email = "18153828+IronAdamant@users.noreply.github.com"},
]
keywords = ["mcp", "multi-agent", "coordination", "swarm", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
# ``dev`` is the contract for "I want to run the full test + lint suite".
# Coverage tooling stays here (not in ``dependencies``) so the runtime
# package keeps the zero-third-party-deps invariant. The dispatch-coverage
# generator in ``scripts/gen_docs.py`` reads ``coverage.json`` if it
# exists and falls back to a placeholder otherwise — so check-only runs
# in environments without the dev extra still work.
dev = [
    "pytest>=7.0",
    "coverage>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
coordinationhub = "coordinationhub.cli:main"

[project.urls]
Homepage = "https://github.com/IronAdamant/coordinationhub"
Repository = "https://github.com/IronAdamant/coordinationhub"

[tool.setuptools.dynamic]
version = {attr = "coordinationhub.__version__"}

[tool.setuptools.packages.find]
include = ["coordinationhub*"]

[tool.setuptools.package-data]
coordinationhub = ["py.typed", "data/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
